--- a/package.json
+++ b/package.json
@@ -13,15 +13,21 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "@popperjs/core": "^2.9.3",
+    "@vue/composition-api": "^1.7.1",
     "axios": "^0.21.1",
-    "bootstrap": "^5.1.0",
+    "bootstrap": "^5.2.3",
+    "bootstrap-vue": "^2.23.1",
+    "jquery": "^3.6.3",
     "js-cookie": "^2.2.1",
+    "pinia": "^2.0.28",
     "sweetalert2": "^11.1.2",
     "vform": "^2.1.1",
     "vue": "^2.6.14",
     "vue-i18n": "^8.25.0",
+    "vue-js-toggle-button": "^1.3.3",
     "vue-meta": "^2.4.0",
     "vue-router": "^3.5.2",
+    "vue-toggle-btn": "^0.1.2",
     "vue-wave-surfer": "^1.0.1",
     "vuex": "^3.6.2",
     "vuex-router-sync": "^5.0.0",
