--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sweetalert2": "^11.1.2",
     "vform": "^2.1.1",
     "vue": "^2.6.14",
+    "vue-bootstrap-slider": "^2.1.8",
     "vue-i18n": "^8.25.0",
     "vue-js-toggle-button": "^1.3.3",
     "vue-meta": "^2.4.0",
